MWPW-109312 - Section Metadata
* Ability to spec section style
* Ability to set background image

Resolves: MWPW-109312

--- a/libs/styles/styles.css
+++ b/libs/styles/styles.css
@@ -109,6 +109,10 @@ header nav {
   display: none;
 }
 
+.section .section-metadata {
+  display: none;
+}
+
 h1 {
   font-size: var(--type-heading-xl-size);
   line-height: var(--type-heading-all-lh);
@@ -286,10 +290,19 @@ main [data-status='loading'] {
 
 main > .section {
   display: block;
+  position: relative;
 }
 
 main > .section > .content {
   display: block;
   max-width: var(--grid-container-width);
   margin: 0 auto;
+}
+
+main > .section > .content > *:first-child {
+  margin-top: 0;
+}
+
+main > .section > .content > *:last-child {
+  margin-bottom: 0;
 }
