--- a/libs/styles/styles.css
+++ b/libs/styles/styles.css
@@ -10,7 +10,7 @@
  * governing permissions and limitations under the License.
  */
 
- @font-face {
+@font-face {
   font-family: 'Trebuchet MS';
   font-weight: 700;
   size-adjust: 95%;
@@ -38,7 +38,7 @@
   /*** Typography ***/
 
   /* Fonts */
-  --body-font-family: adobe-clean, 'Trebuchet MS', sans-serif;
+  --body-font-family: 'Adobe Clean', adobe-clean, 'Trebuchet MS', sans-serif;
   --fixed-font-family: 'Roboto Mono', menlo, consolas, 'Liberation Mono', monospace;
 
   /* Headings (Consonant) */
@@ -92,10 +92,6 @@ body {
   margin: 0;
   word-wrap: break-word;
   -webkit-font-smoothing: antialiased;
-}
-
-body.appear {
-  display: unset;
 }
 
 header {
